# Nester-AI_Agents-Store

./: .dockerignore  .env.example  .gitignore  Dockerfile  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  start.sh  stop.sh  update.sh
api/: auth.py  main.py  shutdown.py  streaming.py
api/routes/: chat.py  flows.py  health.py  integrations.py  knowledge.py  oauth.py  runs.py  scheduler.py  settings.py  verify.py  webhooks.py
auth/: providers.py
config/: keys.py  models.py  settings.py
core/: circuit_breaker.py  engine.py  errors.py  hot_reload.py  queue.py  registry.py  runner.py  versioning.py
flows/: github_monitor.yaml  sales_outreach.yaml
memory/: checkpointer.py  cost_tracker.py  mem0_store.py  namespace.py  redis_store.py  sqlite_ops.py  supabase_store.py
nodes/: __init__.py  tool_agent.py
nodes/github/: __init__.py  action_dispatcher.py  event_collector.py  intelligence_synthesizer.py  productivity_analyzer.py  security_analyzer.py
nodes/sales/: __init__.py  activity_analyzer.py  company_linkedin_researcher.py  company_researcher.py  email_composer.py  linkedin_researcher.py  output_formatter.py  persona_builder.py  service_matcher.py
observability/: audit.py  metrics.py  tracing.py
schemas/: github_monitor.py  sales_outreach.py
tools/: cache.py  credential_tester.py  direct_tools.py  health.py  interceptors.py  langchain_bridge.py  mcp_config.yaml  registry.py
tools/browser/: __init__.py  config.py  pool.py  scraper.py  search.py  stealth.py
tools/servers/: email.py  email_server.py  github_custom.py  (+3 more)
(+21 files in other folders)
